other editor functions

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "@coreui/icons-vue": "^2.0.0",
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.5",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^9.8.8",
     "core-js": "^3.6.5",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "postcss": "^7.0.39",
+    "autoprefixer": "^9.8.8"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
